@@ -21,3 +21,4 @@
 4. add /v2/driver/info api
 5. add v2/driver/decisionDriver api
 6. add v2/driver/orderTrack api
+7. add v2/driver/location api
